Allow tracking of fiducial markers created from mouse clicks.  Remove any ability to detect the electrodes.

--- a/mapclientplugins/imagebasedfiducialmarkersstep/qt/configuredialog.ui
+++ b/mapclientplugins/imagebasedfiducialmarkersstep/qt/configuredialog.ui
@@ -13,27 +13,30 @@
   <property name="windowTitle">
    <string>Configure Step</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout_2">
+   <item>
     <widget class="QGroupBox" name="configGroupBox">
      <property name="title">
       <string/>
      </property>
      <layout class="QFormLayout" name="formLayout">
+      <property name="fieldGrowthPolicy">
+       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+      </property>
       <item row="0" column="0">
-       <widget class="QLabel" name="label0">
+       <widget class="QLabel" name="identifier_label">
         <property name="text">
          <string>identifier:  </string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit0"/>
+       <widget class="QLineEdit" name="identifier_lineEdit"/>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
