--- a/mapclientplugins/imagebasedfiducialmarkersstep/qt/imagebasedfiducialmarkerswidget.ui
+++ b/mapclientplugins/imagebasedfiducialmarkersstep/qt/imagebasedfiducialmarkerswidget.ui
@@ -130,48 +130,30 @@
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="groupBox_2">
+       <widget class="QGroupBox" name="tracking_groupBox">
         <property name="title">
-         <string>Activity:</string>
+         <string>Tracking:</string>
         </property>
-        <layout class="QFormLayout" name="formLayout">
-         <item row="0" column="0">
-          <widget class="QRadioButton" name="defineROI_radioButton">
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <item>
+          <widget class="QPushButton" name="track_pushButton">
            <property name="text">
-            <string>Define ROI</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
+            <string>Track</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QPushButton" name="defineROI_pushButton">
-           <property name="text">
-            <string>Confirm</string>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
            </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QPushButton" name="setInitialTrackingPoints_pushButton">
-           <property name="text">
-            <string>Confirm</string>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
            </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QRadioButton" name="setInitialTrackingPoints_radioButton">
-           <property name="text">
-            <string>Set initial tracking points</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QRadioButton" name="finaliseTrackingPoints_radioButton">
-           <property name="text">
-            <string>Finalise tracking points</string>
-           </property>
-          </widget>
+          </spacer>
          </item>
         </layout>
        </widget>
