Updated .ui file.

--- a/mapclientplugins/imagebasedfiducialmarkersstep/qt/imagebasedfiducialmarkerswidget.ui
+++ b/mapclientplugins/imagebasedfiducialmarkersstep/qt/imagebasedfiducialmarkerswidget.ui
@@ -106,7 +106,16 @@
             <enum>QFrame::Raised</enum>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout_4">
-            <property name="margin">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
              <number>0</number>
             </property>
             <item>
@@ -202,7 +211,16 @@
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <property name="margin">
+         <property name="leftMargin">
+          <number>1</number>
+         </property>
+         <property name="topMargin">
+          <number>1</number>
+         </property>
+         <property name="rightMargin">
+          <number>1</number>
+         </property>
+         <property name="bottomMargin">
           <number>1</number>
          </property>
          <item>
@@ -247,7 +265,7 @@
   <customwidget>
    <class>BaseSceneviewerWidget</class>
    <extends>QWidget</extends>
-   <header>opencmiss\zincwidgets\basesceneviewerwidget.h</header>
+   <header>opencmiss/utils/zinc/widgets/basesceneviewerwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
